force-app/main/default/objects/SOS_DAC_Code_Tag__c/SOS_DAC_Code_Tag__c.object-meta.xml
<CustomObject>
    <label>SOS &amp; DAC Code Tag</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOS &amp; DAC Code Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>