force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <formula>IF(
NOT(ISBLANK( DAC_Code__c )),
DAC_Code__r.Attribute__c ,
SOS_Code__r.Attribute__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute</label>
    <type>Text</type>
</CustomField>