force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <formula>IF(
NOT(ISBLANK( DAC_Code__c )),
HYPERLINK(&quot;/&quot; &amp;  DAC_Code__r.Id ,   DAC_Code__r.Name ),
HYPERLINK(&quot;/&quot; &amp;  SOS_Code__r.Id , SOS_Code__r.Name) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code</label>
    <type>Text</type>
</CustomField>