force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>SOS &amp; DAC Code Tags</relationshipLabel>
    <relationshipName>SOS_DAC_Code_Tags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>