force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/Project_Data__c.field-meta.xml
<CustomField>
    <fullName>Project_Data__c</fullName>
    <formula>&quot;Region: &quot; &amp;  Project__r.SOS_Region__c &amp; &quot; | SOS Impl Org: &quot;&amp;   Project__r.SOS_Implementing_Organisation__r.Name  &amp; &quot; | Status: &quot; &amp;  TEXT(Project__r.ampi__Project_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Data</label>
    <type>Text</type>
</CustomField>