force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/Project_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_ID_Link__c</fullName>
    <formula>Project__r.Project_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project ID Link</label>
    <type>Text</type>
</CustomField>