force-app/main/default/objects/SOS_DAC_Code_Tag__c/fields/SOS_Code__c.field-meta.xml
<CustomField>
    <fullName>SOS_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOS Code</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You need to select an SOS Code</errorMessage>
        <filterItems>
            <field>SOS_DAC_Codes__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SOS Code</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SOS_DAC_Codes__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>SOS_Code_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>