force-app/main/default/objects/SOS_DAC_Code_Tag__c/recordTypes/DAC_Code_Tag.recordType-meta.xml
<RecordType>
    <fullName>DAC_Code_Tag</fullName>
    <active>true</active>
    <label>DAC Code Tag</label>
</RecordType>