force-app/main/default/objects/SOS_DAC_Code_Tag__c/recordTypes/SOS_Code_Tag.recordType-meta.xml
<RecordType>
    <fullName>SOS_Code_Tag</fullName>
    <active>true</active>
    <label>SOS Code Tag</label>
</RecordType>